# slint_cpp_bilinear_interpolation

./: CMakeLists.txt  README.md
src/: My_bilinear_interpolation.cpp  main.cpp
src/utils/: file_dialog.cpp
src/utils/shared/: random_number.cpp
ui/: about.slint  appwindow.slint  displayimages.slint  sidebar.slint  test.slint
ui/res/: icon.rc
